# MServidor

./: CMakeLists.txt  main.cpp
Server/: JSONMaker.cpp  JSONMaker.h  ListaDoble.h  MapNode.cpp  MapNode.h  Memoria.cpp  Memoria.h  Server.cpp  Server.h
